[FIX] gap flex

--- a/css/style.css
+++ b/css/style.css
@@ -99,14 +99,14 @@ nav, footer {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 4%;
-  gap: 16px;
+  gap: 32px;
 }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2);
   transition: 0.3s;
   border-radius: 5px;
-  width: 32%;
+  width: 30%;
   margin-top: 4%;
 }
 .card:hover {
